expected/errors/quoted-produced-artifact.err
error: artifact labels are identifiers, not strings

  --> examples/errors/quoted-produced-artifact.dsl:3:21
   3 |   produces artifact "application" at "/app/target/application.jar"
     |                     ^^^^^^^^^^^^^
help: write `produces artifact application at "/path/or/pattern"`
